# santiago-ab

./: README.md
LifeWork/HTML_CSS_JS/: script.js
LifeWork/HTML_CSS_JS/Pagina_App/: android.php  index.php  windows.php
LifeWork/Java/Curso_Java/: Alumno.java  Alumno2.java  BusquedaCadena.java  CompararCadenas.java  Conversion.java  DivCero.java  DivCeroFix.java  Ejerccio6.java  Ejercicio.java  Ejercicio1.java  Ejercicio2.java  Ejercicio3.java  Ejercicio5.java  Ejercicio6.java  ExtraccionCaracteres.java  Fecha.java  Ifelse.java  ModifFecha.java  Numero2.java  Operaciones.java  OperadorT.java  Persona.java  Persona2.java  Persona3.java  Prat1.java  Sobrecarga.java  Stringnumero.java  Switch.java  Teclado2.java  Teclado3.java  Tokens.java  UsoBufferedReader.java  UsoBufferedWriter.java  UsoFileReader_BufferedReader.java  crearArchivo.java  cuadrado.java  dowhile.java  ejemp1.java  ejemploprofeejercicio3.java  estudiante.java  (+17 more)
LifeWork/Node/: binance.js
LifeWork/Node/Imagenes/: app.js  package.json  routes_app.js
LifeWork/Node/Pagina_basica/: package.json
LifeWork/Node/Pagina_notas/: package.json
LifeWork/Node/ZKP/: cliente.py  python.txt  servidor.py  sniffer.py
LifeWork/Node/scraping/: database.js  horseAnimalLinks.js  horseData.js  horseImages.js  horseLinks.js  package.json
LifeWork/Python/ARP/: index.py  prevent.txt
LifeWork/React/Front/: package.json
LifeWork/Rust+Holo/EYSS/my_app/zomes/lists/code/: .hcbuild  Cargo.toml
LifeWork/Rust+Holo/EYSS/my_app/zomes/lists/code/src/: lib.rs
LifeWork/Solidity/marketplace/: .env.sample  hardhat.config.js  (+2 more)
(+703 files in other folders)
